<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AwesomeApp</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to AwesomeApp!</string>
    <string name="username">Username* :</string>
    <string name="password">Password* :</string>
    <string name="Login">Login:</string>
    <string name="message1">Edw tha dimiourgithei to 1stTabActivity</string>
 	<color name="darkBlue">#324259</color>
 	<color name="black">#000000</color>
 	<color name="blue">#006eee</color>
 	<color name="white">#ffffff</color>
 	<color name="yellow">#ee8000</color>
 	<color name="default_color">#324259</color>
 	<color name="my_holo_light_blue">#ff33b5e5</color>
    <string name="register">Click here for registration</string>
    <string name="question"> Do not have an account yet?</string>
    <string name="statistics_fragment">Statistics</string>
    <string name="users_statistcs_fragment">User\'s Statistics</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="add_pattern">Add Malicious Pattern</string>
    <string name="hello_world">Hello world!</string>
    <string name="click">Click</string>
    <string name="here">here</string>
    <string name="registration">For  registration  click  </string>
    <string name="yperoxa"> YPEROXA!</string>
    <string name="register_activity">RegisterActivity</string>
    <string name="registration_page">Client  Registration  Page  </string>
    <string name="PCLaptop_1"> PC/Laptop #1* :</string>
    <string name="PCLaptop_2"> PC/Laptop #2:</string>
    <string name="PCLaptop_3"> PC/Laptop #3:</string>
    <string name="necessaryfields">* fields with * are necessary </string>
    <string name="Register">Register</string>
    <string name="insertion">Insert new MaliciousPattern</string>
    <string name="select_for_insert">Select type of pattern you want to add</string>
    <string name="add_new">I wanna add new</string>
    <string name="add_pattern_activity">AddPatternActivity</string>
    <string name="show_own">show mine</string>
	<string name="remove_terminal">Choose a node to delete</string>
	<string name="newpattern">New pattern</string>
	<string name="insertbutton">insert</string>
	<string name="logout">Logout</string>
	<string name="settings">settings</string>
	<string name="menu_add">add pattern</string>
	<string name="menu_remove">remove terminal</string>
	<string name="delete">delete</string>
	<string name="settings4">settings</string>
	<string name="choose_devices">Select from the list devices you own:</string>
	<string name="about_us">About us</string>
	<string name="choose_type">Choose type</string>
	<string name="worker_service">WorkerService</string>
</resources>